# pyyorkshirewater

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test.yml
pyyorkshirewater/: __init__.py  auth.py  client.py  const.py  exceptions.py  models.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py
