[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pyyorkshirewater"
version = "1.0.0"
description = "Async Python client for Yorkshire Water's customer self-service API. Unofficial and not affiliated with Yorkshire Water."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Dan Simms" }]
keywords = ["yorkshire-water", "smart-meter", "home-assistant", "water", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/dan-simms1/pyyorkshirewater"
Repository = "https://github.com/dan-simms1/pyyorkshirewater"
Issues = "https://github.com/dan-simms1/pyyorkshirewater/issues"
Changelog = "https://github.com/dan-simms1/pyyorkshirewater/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["pyyorkshirewater"]

[tool.hatch.build.targets.sdist]
include = [
    "pyyorkshirewater",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: live integration tests against the real Yorkshire Water API. Skipped unless YW_INTEGRATION_TESTS=1.",
]

[tool.coverage.run]
source = ["pyyorkshirewater"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
